Edited my CSS to make it more responsive
Edited my CSS to make it more responsive

--- a/src/App.css
+++ b/src/App.css
@@ -293,6 +293,9 @@
     border-color: rgb(244, 245, 247);
     padding: 24px 0;
   }
+  sub{
+    font-size: 10px;
+  }
 }
 
 @media screen and (max-width: 376px) {
@@ -385,6 +388,104 @@
   border-radius: 8px;
   margin: 20px 13px;
   padding: 24px 32px;
+}
+sub{
+  font-size: 10px;
+}
+}
+@media screen and (min-width: 376px) {
+#btn__zuri {
+  font-family: Inter;
+  font-weight: 500;
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  height: 76px;
+  justify-content: center;
+  background: rgb(234, 236, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(234, 236, 240);
+  border-image: initial;
+  border-radius: 8px;
+  margin: 20px 13px;
+  padding: 24px 32px;
+}
+#books {
+  font-family: Inter;
+  font-weight: 500;
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  height: 76px;
+  justify-content: center;
+  background: rgb(234, 236, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(234, 236, 240);
+  border-image: initial;
+  border-radius: 8px;
+  margin: 20px 13px;
+  padding: 24px 32px;
+}
+#book__python {
+  font-family: Inter;
+  font-weight: 500;
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  height: 76px;
+  justify-content: center;
+  background: rgb(234, 236, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(234, 236, 240);
+  border-image: initial;
+  border-radius: 8px;
+  margin: 20px 13px;
+  padding: 24px 32px;
+}
+#pitch {
+  align-items: center;
+  font-family: Inter;
+  font-weight: 500;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  height: 76px;
+  justify-content: center;
+  background: rgb(234, 236, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(234, 236, 240);
+  border-image: initial;
+  border-radius: 8px;
+  margin: 20px 13px;
+  padding: 24px 32px;
+}
+#book__design {
+  align-items: center;
+  font-family: Inter;
+  font-size: 500;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  height: 76px;
+  justify-content: center;
+  background: rgb(234, 236, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(234, 236, 240);
+  border-image: initial;
+  border-radius: 8px;
+  margin: 20px 13px;
+  padding: 24px 32px;
+}
+sub{
+  font-size: 10px;
 }
 }
 
